[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures.png" type="Texture" id=1]
[ext_resource path="res://Explosion.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 270, 10, 10 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 280, 10, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 260, 10, 10 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 2 ), SubResource( 2 ), SubResource( 1 ), SubResource( 1 ), SubResource( 3 ) ],
"loop": false,
"name": "Fire",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 4 )

[node name="Explosion" type="Area2D"]
z_index = 5
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "New Anim"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 5 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
